--- a/thatblog/blog/static/css/blog.css
+++ b/thatblog/blog/static/css/blog.css
@@ -11,6 +11,11 @@ body {
   .bigbrand{
       font-size: 1.5em;
   }
+
+  .centerstage{
+    margin-left: auto;
+    margin-right: auto;
+  }
   
   #loading-wrapper {
     position: fixed;
