--- a/thatblog/blog/static/css/blog.css
+++ b/thatblog/blog/static/css/blog.css
@@ -16,7 +16,28 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
+
+  .postdate{
+    text-align: center;
+  }
   
+  .posttitle{
+    font-family: 'Oswald', sans-serif;
+    font-size: 3em;
+    text-align: center;
+  }
+
+  .postcontent{
+    font-family: 'Roboto';
+    font-size: 1.5em;
+  }
+
+  .btn-comment{
+    position: absolute;
+    right: 0px;
+  }
+
+
   #loading-wrapper {
     position: fixed;
     width: 100%;
