--- a/thatblog/blog/static/css/blog.css
+++ b/thatblog/blog/static/css/blog.css
@@ -3,13 +3,13 @@ body {
   }
   
   .techfont{
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 1.5em;
     margin-bottom: 10px; 
   }
 
   .bigbrand{
-      font-size: 1.5em;
+      font-size: 2em;
   }
 
   .centerstage{
