--- a/thatblog/blog/templates/blog/post_detail.html
+++ b/thatblog/blog/templates/blog/post_detail.html
@@ -7,10 +7,10 @@
             {{ post.published_date}}
         </div>
     {% else %}
-        <a class="btn btn-default" href="{%url 'post_publish' pk=post.pk %}">Publish</a>
+        <a class="btn btn-secondary" href="{%url 'post_publish' pk=post.pk %}">Publish</a>
     {% endif %}
 
-    <p class="postcontent">{{ post.title|safe|linebreaks}}</p>
+    <p class="postcontent">{{ post.text|safe|linebreaks}}</p>
 
     {% if user.is_authenticated %}
         <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-primary">
@@ -22,7 +22,7 @@
     {% endif %}
 
     <hr>
-    <a href="{% url 'add_commemt_to_post' pk=post.pk %}" class="btn btn-primary btn-comment">Add Comment</a>
+    <a href="{% url 'add_comment_to_post' pk=post.pk %}" class="btn btn-primary btn-comment">Add Comment</a>
     
     <div class="container">
         {% for comment in post.comments.all %}
