--- a/thatblog/blog/templates/blog/post_detail.html
+++ b/thatblog/blog/templates/blog/post_detail.html
@@ -7,17 +7,17 @@
             {{ post.published_date}}
         </div>
     {% else %}
-        <a class="btn btn-secondary" href="{%url 'post_publish' pk=post.pk %}">Publish</a>
+        <a class="btn btn-secondary" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
     {% endif %}
 
-    <p class="postcontent">{{ post.text|safe|linebreaks}}</p>
+    <p class="postcontent">{{ post.text|safe|linebreaksbr}}</p>
 
     {% if user.is_authenticated %}
         <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-primary">
-            <span class="glyphicon glyphicon-pencil"></span>
+            <span><i class="fas fa-pencil-alt"></i></span>
         </a>
         <a href="{% url 'post_remove' pk=post.pk %}" class="btn btn-primary">
-            <span class="glyphicon glyphicon-remove"></span>
+            <span> <i class="fas fa-eraser"></i></span>
         </a>
     {% endif %}
 
